# system

./: .git-blame-ignore-revs  .gitconfig  .gitignore  .gitmodules  .sops.yaml  .vsvimrc  .zshrc  LICENSE-MIT  README.md  README.org  configuration.nix  emacs.nix  flake.nix  gitconfig  home.nix  init_root.sh  init_symlinks.sh  iso.nix  mklinks.bat  new-host-bootstrap.sh  persist.nix  readme.org  users.nix  zshenv  zshrc
.emacs.d/: .gitignore  README.org
.github/: CODEOWNERS
.stack/: config.yaml
.xmonad/: xmonad.hs
configs/: .vsvimrc
emacs/: .emacs  .gitignore  README.org  config.org  custom.el  early-init.el  funcs.el  global-context.reg  haskell.el  init-completion.el  init-csharp.el  init-evil.el  init-keys.el  init-markdown.el  init-org.el  init-package.el  init-settings.el  init-themes.el  init.el  my-funcs.el  profiles.el  readme.org
gimp-2.8/: colorrc  contextrc  gimp-2.8  gimprc  menurc  menurc.REMOVED.git-id  pluginrc  pluginrc.REMOVED.git-id  sessionrc  tags.xml  themerc
home-manager/: bat.nix  emacs.nix  git.nix  gui-theme.nix  programs.nix  swaylock.nix  zathura.nix
hosts/: bellatrix.nix  betelgeuse.nix  blazar.nix  iso.nix  mintaka.nix  mira.nix  nixos-wsl.nix  tau-ceti.nix  ton-618.nix  wsl.nix
keyboard-firmware/: readme.org
machines/: common-configuration.nix
modules/: secrets.nix  unfree.nix  user.nix
nix/: sources.json
nixos/: configuration.nix  dropbox.nix  emacs.nix  fonts.nix  hardware-configuration.nix  home.nix  init_root.sh  (+2 more)
xmonad/: .gitignore  default.nix  readme.org  will-xmonad.cabal  xmonad.hs
xmonad/nix/: sources.json
(+373 files in other folders)
